Fixed height issue on about me section while on mobile

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -138,7 +138,7 @@ $adjust-height: 750px;
       padding: 0;
       margin-top: 6rem;
       margin-right: 0.1rem;
-      height: 50%;
+      height: 41%;
       width: 99%;
       box-shadow: -1px -4px 4px #dddddd;
     }
